--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>WebSocket Chat</h1>
+        <div id="connectionStatus" style="text-align: center; margin-bottom: 10px;">Disconnected</div>
         <div class="connection-settings">
             <input type="text" id="nicknameInput" placeholder="Your Nickname" value="Guest" autocomplete="off">
             <input type="text" id="websocketUrlInput" placeholder="WebSocket URL (e.g., wss://your-replit.repl.co)" value="wss://" autocomplete="off">
