--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="connectButton">Connect</button>
         </div>
         <div id="messages" class="messages"></div>
-        <form id="messageForm" class="message-form">
+        <form id="messageForm" class="message-form" style="display: none;">
             <input type="text" id="messageInput" placeholder="Type your message..." autocomplete="off">
             <button type="submit">Send</button>
         </form>
