--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>WebSocket Chat</h1>
+        <h1 id="mainTitle">B2 U N I</h1>
         <div id="connectionStatus" style="text-align: center; margin-bottom: 10px;">Disconnected</div>
         <div class="connection-settings">
             <input type="text" id="nicknameInput" placeholder="Your Nickname" value="Guest" autocomplete="off">
