--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1 id="mainTitle">B2 U N I</h1>
+        <div class="controls-container">
+            <button id="theme-toggle">🌙</button>
+        </div>
         <div id="connectionStatus" style="text-align: center; margin-bottom: 10px;">Disconnected</div>
         <div class="connection-settings">
             <input type="text" id="nicknameInput" placeholder="Your Nickname" value="Guest" autocomplete="off">
