--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul id="user-list"></ul>
         </div>
         <div id="messages" class="messages"></div>
+        <div id="typing-indicator" class="typing-indicator"></div>
         <form id="messageForm" class="message-form" style="display: none;">
             <input type="text" id="messageInput" placeholder="Type your message..." autocomplete="off">
             <button type="submit">Send</button>
