--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <input type="text" id="websocketUrlInput" placeholder="WebSocket URL (e.g., wss://your-replit.repl.co)" value="wss://" autocomplete="off">
             <button id="connectButton">Connect</button>
         </div>
+        <div id="recent-connections-container">
+            <h4 style="margin-bottom: 10px; text-align: center;">Recent Connections</h4>
+            <div id="recent-connections-list"></div>
+        </div>
         <div id="user-list-container">
             <h3 style="text-align: center; margin-bottom: 5px;">Online Users: <span id="user-count">0</span></h3>
             <ul id="user-list"></ul>
