--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 id="mainTitle">B2 U N I</h1>
         <div class="controls-container">
             <button id="theme-toggle">🌙</button>
+            <button id="notification-toggle">🔔</button>
         </div>
         <div id="connectionStatus" style="text-align: center; margin-bottom: 10px;">Disconnected</div>
         <div class="connection-settings">
